33_security_group.tf
resource "aws_security_group" "rds" {
  name   = "${var.name}-rds-sg"
  vpc_id = aws_vpc.main.id

  # 외부로 나가는 트래픽을 차단하는것이 보안에 좋음
#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = []
#   }

  ingress {
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [] # [aws_security_group.ecs_api_rds_client.id]
  }

  tags = {
    Name = "${var.name}-rds-sg"
  }
}
